# nysor

./: AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  TODO.txt  nvim-functions.txt  nvim-notifs.txt  pyproject.toml  rawi.py  rawq.py  requirements.txt
.claude/: settings.local.json
.github/workflows/: tests.yaml
docs/: 2026-04-05-diseño-tests-nvim-interface.md  2026-04-09-diseño-tests-nvim-notifications.md
nysor/: __main__.py  command_line.py  logical_lines.py  logtools.py  main.py  nvim_interface.py  nvim_notifications.py  swarm.py  text_display.py  utils.py
old/: example-widths.py  post-setup-show-attempt.diff  stdin-attempt.diff
tests/: conftest.py  test_infra.py  test_logical_lines.py  test_nvim_interface.py  test_nvim_notifications.py
vym/: logical_lines.py  main.py  nvim_interface.py  text_display.py
