# Copyright 2026 Facundo Batista
# Licensed under the Apache v2 License
# For further info, check https://github.com/facundobatista/nysor

[project]
name = "nysor"
version = "0.4"
description = "A PyQt GUI for Neovim"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Facundo Batista", email = "facundo@taniquetil.com.ar" },
]
keywords = ["neovim", "gui", "pyqt", "editor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Editors",
]
requires-python = ">=3.12"
dependencies = [
    "PyQt6==6.9.1",
    "foffinf==0.1",
    "msgpack==1.1.1",
    "qasync==0.27.1",
]

[project.optional-dependencies]
dev = [
    "codespell",
    "flake8",
    "pydocstyle",
    "pytest",
]

[project.scripts]
nysor = "nysor.main:start"

[project.urls]
Homepage = "https://github.com/facundobatista/nysor"
Repository = "https://github.com/facundobatista/nysor"
Issues = "https://github.com/facundobatista/nysor/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=64"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nysor*"]
